--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,12 @@
 click==7.1.2
 dnspython==2.1.0
+dominate==2.6.0
 Flask==1.1.2
+Flask-Bootstrap4==4.0.2
 Flask-PyMongo==2.3.0
+Flask-WTF==0.14.3
 itsdangerous==1.1.0
 pymongo==3.11.3
+visitor==0.1.3
 Werkzeug==1.0.1
+WTForms==2.3.3
