--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,5 @@ core.python*
 env.py
 __pycache__/
 *.py[cod]
-static/images/public/*
-!static/images/public/.gitkeep 
+uploads/*
+!uploads/.gitkeep 
