--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+boto3==1.17.49
+botocore==1.20.49
 click==7.1.2
 dnspython==2.1.0
 dominate==2.6.0
@@ -6,7 +8,10 @@ Flask-Bootstrap4==4.0.2
 Flask-PyMongo==2.3.0
 Flask-WTF==0.14.3
 itsdangerous==1.1.0
+jmespath==0.10.0
+numpy==1.20.2
 pymongo==3.11.3
+s3transfer==0.3.6
 visitor==0.1.3
 Werkzeug==1.0.1
 WTForms==2.3.3
