--- a/requirements.txt
+++ b/requirements.txt
@@ -5,12 +5,14 @@ dnspython==2.1.0
 dominate==2.6.0
 Flask==1.1.2
 Flask-Bootstrap4==4.0.2
+Flask-Cors==3.0.10
 Flask-PyMongo==2.3.0
 Flask-WTF==0.14.3
 itsdangerous==1.1.0
 jmespath==0.10.0
 numpy==1.20.2
 pymongo==3.11.3
+pyOpenSSL==20.0.1
 s3transfer==0.3.6
 visitor==0.1.3
 Werkzeug==1.0.1
